<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello_msgs</name>
  <version>0.0.0</version>
  <description>>This package provides the messages for the ROS interface for the TelloPy library.
  This is an unreleased ROS2 fork of the original package.</description>

  <author email="jordyvanappeven@gmail.com">Jordy van Appeven</author>
  <author email="jerome@idsia.ch">Jerome Guzzi</author>
  <maintainer email="jerome@idsia.ch">Jerome Guzzi</maintainer>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url>http://www.ros.org/wiki/tello_driver</url>
  <url type="website">https://github.com/jeguzzi/tello_driver</url>

  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
